# arduinoio

./: LICENSE  README.md
firmware/: ArduinoEA.aps  analog.h  counter.c  counter.h  gpio.c  gpio.h  id.h  parser.c  project.h  temperature.c  temperature.h  uart.c  uart.h
firmware/default/: Makefile
firmware/src/: analog.c  analog.h  arduinoea.aws  counter.c  counter.h  gpio.c  gpio.h  hal.h  i2c.c  i2c.h  id.c  id.h  main.c  parser.c  parser.h  project.h  servo.c  servo.h  temperature.c  temperature.h  uart.c  uart.h
firmware/src/default/: ArduinoEA.hex
framework/: CMakeLists.txt  README.txt  analogPin.h  gpioInputPin.cpp  gpioOutputPin.h  i2cBridge.cpp  ioboard.cpp  ioboard.h  ioentity.cpp  ioentity_factory.h  serial.h
framework/src/: analogPin.cpp  analogPin.h  counterPin.cpp  counterPin.h  gpioInputPin.cpp  gpioInputPin.h  gpioOutputPin.cpp  gpioOutputPin.h  i2cBridge.cpp  i2cBridge.h  ioboard.cpp  ioboard.h  ioentity.cpp  ioentity.h  ioentity_factory.h  pin.cpp  pin.h  serial.cpp  serial.h  servo.cpp  servo.h  tags.cpp  tags.h
